2008-04-03  Dan Bernstein  <mitz@apple.com>

        - attempted Gtk build fix

        * GNUmakefile.am:

2008-04-03  Dan Bernstein  <mitz@apple.com>

        - attempted Qt build fix

        * platform/graphics/qt/GradientQt.cpp:
        (WebCore::Gradient::platformDestroy):

2008-04-03  Dan Bernstein  <mitz@apple.com>

        - attempted Gtk build fix

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::stroke):

2008-04-03  Dan Bernstein  <mitz@apple.com>

        - attempted Qt build fix

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::stroke):

2008-04-03  Beth Dakin  <bdakin@apple.com>

        Reviewed by Alice.

        Build fix for non-Macs.

        * page/AXObjectCache.h:
        (WebCore::AXObjectCache::isIDinUse):

2008-04-03  Brent Fulgham  <bfulgham@gmail.com>

        Reviewed by Darin.

        Correct build error due to incomplete merging of changes to project
        files from Issue 17985.  This small project file patch corrects
        the build issue (see http://bugs.webkit.org/show_bug.cgi?id=18195).

        * WebCore.vcproj/WebCore.vcproj:

2008-04-02  Beth Dakin  <bdakin@apple.com>

        Reviewed by Hyatt.

        This patch eliminates AccessibilityObjectMac. All of the platform-
        specific code is now in AccessibilityObjectWrapper.

        * WebCore.xcodeproj/project.pbxproj:
        * dom/Element.h:
        (WebCore::Element::isPasswordField):
        * html/HTMLInputElement.h:
        (WebCore::HTMLInputElement::isPasswordField):
        * page/AXObjectCache.h:
        (WebCore::AXObjectCache::isIDinUse):
        * page/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::isPasswordField):
        (WebCore::AccessibilityObject::press):
        (WebCore::AccessibilityObject::widgetForAttachmentView):
        (WebCore::AccessibilityObject::doAXBoundsForTextMarkerRange):
        (WebCore::AccessibilityObject::doAXTextMarkerForPosition):